# car_racking_hackathon

./: .gitignore  ALGORITHMS_SUMMARY.md  EXPERIMENTS.md  IMPLEMENTATION_SUMMARY.md  LOCATION_UPDATE.md  PLAN.md  QUICK_START.md  README.md  STATUS.md  quick_start.sh  requirements.txt
SAC/: mySAC.py  pyproject.toml
configs/: ddpg_config.yaml  dqn_config.yaml  sac_config.yaml
racing/: pyvenv.cfg
src/: __init__.py  evaluate.py  plot_results.py  test_components.py  train.py
src/agents/: __init__.py  dqn_agent.py
src/networks/: __init__.py  q_network.py
src/results/logs/: config.yaml  metrics_20260209_184146.csv  metrics_20260210_090159.csv
src/utils/: __init__.py  config_adapter.py  config_loader.py  logger.py  preprocessing.py  replay_buffer.py
