[project]
name = "hton"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "gymnasium[box2d,other]>=1.2.3",
    "ipykernel>=7.2.0",
    "matplotlib>=3.10.8",
    "numpy>=2.4.2",
    "optuna>=4.7.0",
    "stable-baselines3>=2.7.1",
    "torch>=2.10.0",
    "torchvision>=0.25.0",
]
